Fix css ref alignment issue

--- a/components/graph/graph.less
+++ b/components/graph/graph.less
@@ -28,6 +28,9 @@
       white-space: nowrap;
       height: 40px;
     }
+    .droparea {
+      margin-top: 11px;
+    }
 
     .ref {
       display: inline-block;
@@ -35,7 +38,6 @@
       cursor: move;
       margin-left: 0px;
       margin-right: 0px;
-      margin-top: 11px;
       outline: none;
       padding: 2px 5px 2px 5px;
       border: 3px solid transparent;
